--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,9 @@
+<!DOCTYPE HTML>
+<!--
+	Alpha by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <head>
 		<title>{{ site.title }}</title>
 		<meta charset="utf-8" />
