--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<!--[if lte IE 8]><script src="{{ site.url }}{{ site.baseurl }}/assets/js/ie/html5shiv.js"></script><![endif]-->
-	<link rel="stylesheet" href="https://rockmonkey4004.github.io/rockmonkey4004.github.io/assets/css/style.css" />
+	<link rel="stylesheet" href="https://rockmonkey4004.github.io/rockmonkey4004.github.io/assets/css/main.css" />
 	<!--[if lte IE 8]><link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/assets/css/ie8.css" /><![endif]-->
 	<!-- Place your kit's code here -->
 	<script src="https://kit.fontawesome.com/dde3862630.js" crossorigin="anonymous"></script>
