--- a/_layouts/blog0.html
+++ b/_layouts/blog0.html
@@ -1,6 +1,3 @@
----
-title: Blog Posts
----
 <!DOCTYPE html>
 
 <!--
@@ -8,7 +5,7 @@ title: Blog Posts
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
----
+
 <html>
 
 {% include head.html %}
@@ -17,15 +14,15 @@ title: Blog Posts
 
   {% include header.html %}
 
-  <ul>
-    {% for post in site.posts %}
-    <li>
-      <a href="{{ post.url }}">{{ post.title }}</a>
-      {{ post.excerpt }}
-    </li>
-    {% endfor %}
-  </ul>
-  {% include cta.html %}
+
+
+  <!--  <div class="box"> -->
+  <span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
+  <h3>This is a subheading</h3>
+  <p> {{ content }}</p>
+
+
+
   {% include footer.html %}
 
 
