--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,3 @@
----
-title: Blog Posts
----
 <!DOCTYPE html>
 
 <!--
@@ -8,23 +5,17 @@ title: Blog Posts
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
----
+
 <html>
 
 {% include head.html %}
 
-<body>
+<body class="landing">
 
   {% include header.html %}
 
-  <ul>
-    {% for post in site.posts %}
-    <li>
-      <a href="{{ post.url }}">{{ post.title }}</a>
-      {{ post.excerpt }}
-    </li>
-    {% endfor %}
-  </ul>
+  {{ content }}
+
   {% include cta.html %}
   {% include footer.html %}
 
