--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,6 +1,3 @@
----
-title: Blog Posts
----
 <!DOCTYPE html>
 
 <!--
@@ -8,7 +5,7 @@ title: Blog Posts
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
----
+
 <html>
 
 {% include head.html %}
@@ -17,15 +14,14 @@ title: Blog Posts
 
   {% include header.html %}
 
-  <ul>
-    {% for post in site.posts %}
-    <li>
-      <a href="{{ post.url }}">{{ post.title }}</a>
-      {{ post.excerpt }}
-    </li>
-    {% endfor %}
-  </ul>
-  {% include cta.html %}
+  {% if page.featured-image %}
+  <span class="image featured">
+    <img src="{{ page.featured-image }}" alt="">
+  </span>
+  {% endif %}
+
+  {{ content }}
+
   {% include footer.html %}
 
 
