--- a/_layouts/blog0.html
+++ b/_layouts/blog0.html
@@ -15,13 +15,7 @@
   {% include header.html %}
 
 
-
-  <!--  <div class="box"> -->
-  <span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
-  <h3>This is a subheading</h3>
-  <p> {{ content }}</p>
-
-
+  {{ content }}
 
   {% include footer.html %}
 
