--- a/_layouts/generic.html
+++ b/_layouts/generic.html
@@ -18,7 +18,31 @@
   </span>
   {% endif %}
 
-  {{ content }}
+  <section id="main" class="container">
+    <header>
+      <h2>page.title</h2>
+      <p>A generic page for every non-generic situation.</p>
+    </header>
+    <div class="box">
+      <span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
+      <h3>This is a subheading</h3>
+      <p> {{ content }} . !!!!Default Text dum condimentum semper commodo massa arcu.</p>
+      <div class="row">
+        <div class="6u 12u(mobilep)">
+          <h3>And now a subheading</h3>
+          <p>Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus
+            faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio vis praesent.</p>
+        </div>
+        <div class="6u 12u(mobilep)">
+          <h3>And another subheading</h3>
+          <p>Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus
+            faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio vis praesent.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
 
   {% include footer.html %}
 
