--- a/_layouts/generic.html
+++ b/_layouts/generic.html
@@ -20,7 +20,7 @@
 
   <section id="main" class="container">
     <header>
-      <h2>page.title</h2>
+      <h2>{{ page.title }}</h2>
       <p>A generic page for every non-generic situation.</p>
     </header>
     <div class="box">
