--- a/_layouts/generic.html
+++ b/_layouts/generic.html
@@ -21,7 +21,7 @@
   <section id="main" class="container">
     <header>
       <h2>{{ page.title }}</h2>
-      <p> {{ subtitle }}</p>
+      <p> {{ layout.subtitle }}</p>
     </header>
     <div class="box">
       <span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
