--- a/_layouts/generic.html
+++ b/_layouts/generic.html
@@ -11,6 +11,7 @@
 {% include head.html %}
 
 <body>
+  {% include header.html %}
 
   {% if page.featured-image %}
   <span class="image featured">
@@ -45,6 +46,7 @@
 
 
   {% include footer.html %}
+  {% include cta.html %}
 
 
 </body>
