--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,12 +24,12 @@
 	</section>
 	{% else %}
 	<!-- Main -->
-	<section id="main" class="container">
+	<!--	<section id="main" class="container">
 		<header>
 			<h2>{{ page.title }}</h2>
-			<p>{{ page.description }}</p>
+			<p>{{ page.description }}</p> -->
 
 
-		</header>
-		{% endif %}
-		<div class="box">
+	</header>
+	{% endif %}
+	<div class="box">
