--- a/_layouts/generic.html
+++ b/_layouts/generic.html
@@ -13,11 +13,11 @@
 <body>
   {% include header.html %}
 
-  {% if page.featured-image %}
+  <!--  {% if page.featured-image %}
   <span class="image featured">
     <img src="{{ page.featured-image }}" alt="">
   </span>
-  {% endif %}
+  {% endif %} -->
 
   <section id="main" class="container">
     <header>
@@ -25,7 +25,7 @@
       <p> {{ page.subtitle }}</p>
     </header>
     <div class="box">
-      <span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
+      <span class="image featured"><img src="{{ site.url }}{{ site.baseurl }}/images/{{ page.featured-image }}" alt="" /></span>
       <h3>This is a subheading</h3>
       <p> {{ content }} . !!!!Default Text dum condimentum semper commodo massa arcu.</p>
       <div class="row">
