--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -13,7 +13,7 @@
 			<a href="#" class="icon fa-angle-down">Menu</a>
 			<ul>
 				<li><a href="aboutme.html">About Me</a></li>
-				<li><a href="contact.html">Blog</a></li>
+				<li><a href="blogindex.html">Blog</a></li>
 				<li><a href="elements.html">Recommended Items</a></li>
 				<li><a href="elements.html">Topic Tuesday Posts</a></li>
 				<li><a href="elements.html">Tip Thursday Posts</a></li>
