--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -26,8 +26,10 @@
     </header>
     <div class="box">
       <span class="image featured"><img src="{{ site.url }}{{ site.baseurl }}/images/{{ page.featured-image }}" alt="" /></span>
-      <div class="row">
-        <!--  <div class="6u 12u(mobilep)">
+      {{content}}
+
+      <!--<div class="row">
+        < <div class="6u 12u(mobilep)">
           <h3>And now a subheading</h3>
           <p>Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus
             faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio vis praesent.</p>
@@ -36,8 +38,9 @@
           <h3>And another subheading</h3>
           <p>Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus
             faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio vis praesent.</p>
-        </div> -->
-      </div>
+        </div>
+      </div> -->
+
     </div>
   </section>
 
