--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,5 @@
 @import url("font-awesome.min.css");
-@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,300italic,400italic");
+@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,300italic,400italic&display=swap");
 @import url('https://fonts.googleapis.com/css?family=Cormorant+Garamond:400,400i&display=swap');
 /*
 	Alpha by HTML5 UP
@@ -1802,6 +1802,7 @@
 		font-weight: 300;
 		line-height: 1.65em;
 		letter-spacing: -0.015em;
+		font-display: swap;
 	}
 
 	a {
