--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
 		<!--	<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li> -->
 		<li><a href="https://www.facebook.com/lauramsanders/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 		<li><a href="https://www.instagram.com/lauramsanders/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-		<li><a href="mailto:laura@h3withlaura.com" class="icon fas fa-envelope-square"><span class="label">Email</span></a></li>
+		<li><a href="mailto:laura@h3withlaura.com?subject=H3 Website" class="icon fas fa-envelope-square"><span class="label">Email</span></a></li>
 
 		<!-- <li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
 		<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
