--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -45,7 +45,7 @@
   </section>
 
 
-  {% include BlogComments.html %}
+  {% include blogComments.html %}
   {% include footer.html %}
   {% include cta.html %}
 
