--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -1,30 +1,44 @@
-<!-- Footer -->
-<footer id="footer">
-	<ul class="icons">
-		<!--	<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li> -->
-		<li><a href="https://www.facebook.com/lauramsanders/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-		<li><a href="https://www.instagram.com/lauramsanders/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-		<li><a href="mailto:laura@h3withlaura.com?subject=H3 Website" class="icon fas fa-envelope-square"><span class="label">Email</span></a></li>
+<article id="comment{% unless include.r %}{{ index | prepend: '-' }}{% else %}{{ include.index | prepend: '-' }}{% endunless %}"
+	class="js-comment comment {% if include.name == site.author.name %}admin{% endif %} {% unless include.replying_to == 0 %}child{% endunless %}" uid="{{ include.uid }}">
 
-		<!-- <li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-		<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-		<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li> -->
-	</ul>
-	<ul class="copyright">
-		<li><a href="https://h3withlaura.com"> &copy; 2020 {{ site.title }}. All rights reserved.</a></li>
-	</ul>
-</footer>
+	<div class="comment__author">
+		{{ include.name }},
+		<span class="comment__date">
+			{% if include.date %}
+			{% if include.index %}
+			<a href="#comment{{ include.index | prepend: '-' }}" title="Permalink to this comment">
+				{% endif %}
+				{{ include.date | date_to_long_string }}
+				{% comment %}
+				{% include format-date.html date=include.date time=false weekDay=false %}
+				{% endcomment %}
+				{% if include.index %}</a>{% endif %}
+			{% endif %}
+		</span>
+	</div>
 
+	<div class="comment__body">
+		{{ include.message | markdownify }}
+	</div>
 
-<!-- Scripts -->
-<script src="{{ site.url }}{{ site.baseurl }}/assets/js/jquery.min.js"></script>
-<script src="{{ site.url }}{{ site.baseurl }}/assets/js/jquery.dropotron.min.js"></script>
-<script src="{{ site.url }}{{ site.baseurl }}/assets/js/jquery.scrollgress.min.js"></script>
-<script src="{{ site.url }}{{ site.baseurl }}/assets/js/skel.min.js"></script>
-<script src="{{ site.url }}{{ site.baseurl }}/assets/js/util.js"></script>
-<!--[if lte IE 8]><script src="{{ site.url }}{{ site.baseurl }}/assets/js/ie/respond.min.js"></script><![endif]-->
-<script src="{{ site.url }}{{ site.baseurl }}/assets/js/main.js"></script>
+	{% unless include.replying_to != 0 %}
+	<div class="comment__meta">
+		<a rel="nofollow" class="comment__reply-link" onclick="return addComment.moveForm('comment-{{ include.index }}', '{{ include.index }}', 'respond', '{{ page.slug }}', '{{ include.uid }}')">↪&#xFE0E; Reply to {{ include.name }}</a>
+	</div>
+	{% endunless %}
+</article>
 
-</body>
-
-</html>
+{% capture i %}{{ include.index }}{% endcapture %}
+{% assign replies = site.data.comments[page.slug] | where_exp: 'item', 'item.replying_to == i' %}
+{% assign replies_date = replies | sort: 'date' %}
+{% for reply in replies_date %}
+{% assign index       = forloop.index | prepend: '-' | prepend: include.index %}
+{% assign r           = reply.replying_to %}
+{% assign replying_to = r | to_integer %}
+{% assign email       = reply.email %}
+{% assign name        = reply.name %}
+{% assign url         = reply.url %}
+{% assign date        = reply.date %}
+{% assign message     = reply.message %}
+{% include comment.html index=index replying_to=replying_to email=email name=name url=url date=date message=message %}
+{% endfor %}
