--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,30 +1,36 @@
-<!-- Footer -->
-<footer id="footer">
-	<ul class="icons">
-		<!--	<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li> -->
-		<li><a href="https://www.facebook.com/lauramsanders/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-		<li><a href="https://www.instagram.com/lauramsanders/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-		<li><a href="mailto:laura@h3withlaura.com?subject=H3 Website" class="icon fas fa-envelope-square"><span class="label">Email</span></a></li>
+<section class="comments">
+	<!--<p> Page slug is: {{ page.slug }} </p>
+  {{ site.data.comments | inspect }} -->
 
-		<!-- <li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-		<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-		<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li> -->
-	</ul>
-	<ul class="copyright">
-		<li><a href="https://h3withlaura.com"> &copy; 2020 {{ site.title }}. All rights reserved.</a></li>
-	</ul>
-</footer>
+	{% if site.data.comments[page.slug] %}
+	<!-- Existing comments -->
+	<hr>
+	<div class="comments__existing">
+		<h2>Comments</h2>
+		{% assign comments = site.data.comments[page.slug] | where_exp: "item", "item.replying_to == ''" %}
+		{% assign comments_by_date = comments | sort: 'date' | reverse %}
+		<!-- List main comments in reverse date order, newest first. List replies in date order, oldest first. -->
+		{% for comment in comments_by_date %}
+		{% assign index       = forloop.length | plus: 1 | minus: forloop.index %}
+		{% assign r           = comment.replying_to %}
+		{% assign replying_to = r | to_integer %}
+		{% assign email       = comment.email %}
+		{% assign name        = comment.name %}
+		{% assign url         = comment.url %}
+		{% assign date        = comment.date %}
+		{% assign message     = comment.message %}
+		{% assign uid         = comment._id %}
+		{% include comment.html index=index replying_to=replying_to email=email name=name url=url date=date message=message uid=uid %}
+		{% endfor %}
+	</div>
+	{% endif %}
 
+	<!-- New comment form -->
+	<div id="respond" class="comment__new">
+		{% include comment_form.html %}
+	</div>
+</section>
 
-<!-- Scripts -->
-<script src="{{ site.url }}{{ site.baseurl }}/assets/js/jquery.min.js"></script>
-<script src="{{ site.url }}{{ site.baseurl }}/assets/js/jquery.dropotron.min.js"></script>
-<script src="{{ site.url }}{{ site.baseurl }}/assets/js/jquery.scrollgress.min.js"></script>
-<script src="{{ site.url }}{{ site.baseurl }}/assets/js/skel.min.js"></script>
-<script src="{{ site.url }}{{ site.baseurl }}/assets/js/util.js"></script>
-<!--[if lte IE 8]><script src="{{ site.url }}{{ site.baseurl }}/assets/js/ie/respond.min.js"></script><![endif]-->
-<script src="{{ site.url }}{{ site.baseurl }}/assets/js/main.js"></script>
-
-</body>
-
-</html>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<script src="{{ '/assets/main.js' | relative_url }}"></script>
+<script src="https://www.google.com/recaptcha/api.js"></script>
