--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -3,6 +3,7 @@
 @import 'libs/mixins';
 @import url('font-awesome.min.css');
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,300italic,400italic");
+@import "comment-styles";
 
 /*
 	Alpha by HTML5 UP
