--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,10 @@
 <!-- Footer -->
 <footer id="footer">
+
+	<!-- Blog Comments -->
+	{% if page.comments == true %}
+	{% include comments.html %}
+	{% endif %}
 	<ul class="icons">
 		<!--	<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li> -->
 		<li><a href="https://www.facebook.com/lauramsanders/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
