--- a/_layouts/aboutme.html
+++ b/_layouts/aboutme.html
@@ -11,13 +11,45 @@
 {% include head.html %}
 
 <body>
-
   {% include header.html %}
 
+  <!--  {% if page.featured-image %}
+  <span class="image featured">
+    <img src="{{ page.featured-image }}" alt="">
+  </span>
+  {% endif %} -->
 
-  {{ content }}
+  <section id="main" class="container">
+    <header>
+      <h2>{{ page.title }}</h2>
+      <p> {{ page.subtitle }}</p>
+    </header>
+    <div class="box">
+      <span class="image featured"><img src="{{ site.url }}{{ site.baseurl }}/images/{{ page.featured-image }}" alt="{{page.alt}}" /></span>
+      {{content}}
+
+      <!--<div class="row">
+        < <div class="6u 12u(mobilep)">
+          <h3>And now a subheading</h3>
+          <p>Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus
+            faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio vis praesent.</p>
+        </div>
+        <div class="6u 12u(mobilep)">
+          <h3>And another subheading</h3>
+          <p>Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus
+            faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio vis praesent.</p>
+        </div>
+      </div> -->
+    </div>
+    {% if page.comments == true %}
+    {% include comments.html %}
+    {% endif %}
+  </section>
+
+
 
   {% include footer.html %}
+  {% include cta.html %}
 
 
 </body>
