--- a/_includes/comment_form.html
+++ b/_includes/comment_form.html
@@ -52,7 +52,7 @@
 
 </form>
 
-<article class="modal mdl-card mdl-shadow--2dp">
+<!-- <article class="modal mdl-card mdl-shadow--2dp">
 	<div>
 		<h3 class="modal-title js-modal-title"></h3>
 	</div>
@@ -60,7 +60,7 @@
 	<div class="mdl-card__actions mdl-card--border">
 		<button class="button mdl-button--colored mdl-js-button mdl-js-ripple-effect js-close-modal">Close</button>
 	</div>
-</article>
+</article> -->
 
 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="display:none">
 	<symbol id="icon-loading" viewBox="149.8 37.8 499.818 525">
