--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -22,9 +22,10 @@
 				<li>
 
 
-					<a href="#">Favorite Recipes</a>
+					<a href="#">Recipes</a>
 					<ul>
 						<li><a href="#">All</a></li>
+						<li><a href="#">My Favorites</a></li>
 						<li><a href="#">Gluten Free</a></li>
 						<li><a href="#">Paleo</a></li>
 						<li><a href="#">Whole 30</a></li>
