--- a/_includes/comment_form.html
+++ b/_includes/comment_form.html
@@ -35,7 +35,7 @@
 	<fieldset>
 		<div class="textfield hp">
 			<label for="hp">
-				<input class="textfield__input" name="fields[hp]" id="hp" type="text" placeholder="Leave blank">
+				<input class="textfield__input" name="fields[hp]" id="hp" type="hidden" placeholder="Leave blank">
 			</label>
 		</div>
 	</fieldset>
