--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -33,6 +33,6 @@
 				</li>
 			</ul>
 		</li>
-		<li><a href="#" class="button">Search</a></li>
+		<li><a href="#" class="fas fa-search"></a></li>
 	</ul>
 </nav>
