--- a/_includes/comment_form.html
+++ b/_includes/comment_form.html
@@ -27,7 +27,7 @@
 	<fieldset>
 		<div class="textfield">
 			<label for="comment-form-email">E-mail
-				<input class="textfield__input" name="fields[email]" type="email" id="comment-form-email" placeholder="Your email (optional, used only to send comments.)" />
+				<input class="textfield__input" name="fields[email]" type="email" id="comment-form-email" placeholder="Your email (optional)" />
 			</label>
 		</div>
 	</fieldset>
