--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,6 +25,8 @@
 <script src="{{ site.url }}{{ site.baseurl }}/assets/js/util.js"></script>
 <!--[if lte IE 8]><script src="{{ site.url }}{{ site.baseurl }}/assets/js/ie/respond.min.js"></script><![endif]-->
 <script src="{{ site.url }}{{ site.baseurl }}/assets/js/main.js"></script>
+<script src="{{ site.url }}{{ site.baseurl }}/assets/js/lazysizes.min.js"></script>
+
 
 </body>
 
