--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -22,17 +22,17 @@
 				<li>
 
 
-					<a href="#">Recipes</a>
+					<a href="#" class="icon">Recipes</a>
 					<ul>
 						<li><a href="#">All</a></li>
 						<li><a href="#">My Favorites</a></li>
 						<li><a href="#">Gluten Free</a></li>
 						<li><a href="#">Paleo</a></li>
-						<li><a href="#">Whole 30</a></li>
+						<li><a href="#" class="icon">Whole 30</a></li>
 					</ul>
 				</li>
 			</ul>
 		</li>
-		<li><a href="#" class="icon fas fa-search"></a></li>
+		<li><a href="{{ site.baseurl | prepend: site.url }}/search.html" class="icon fas fa-search"></a></li>
 	</ul>
 </nav>
