--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -51,10 +51,10 @@
 		),
 
 		accent2: (
-			bg:				#e89980,
-			fg:				mix(#e89980, #ffffff, 25%),
+			bg:				#d18181,
+			fg:				mix(#d18181, #ffffff, 25%),
 			fg-bold:		#ffffff,
-			fg-light:		mix(#e89980, #ffffff, 40%)
+			fg-light:		mix(#d18181, #ffffff, 40%)
 		),
 
 		accent3: (
