--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -25,7 +25,8 @@
       <p> {{ page.subtitle }}</p>
     </header>
     <div class="box">
-      <span class="image featured"><img src="{{ site.url }}{{ site.baseurl }}/images/blog/{{ page.featured-image }}" alt="{{page.alt}}" /></span>
+      <span class="image featured"><img src="{{ page.featured-image }}" alt="{{page.alt}}" /></span>
+    <!-- <span class="image featured"><img src="{{ site.url }}{{ site.baseurl }}/images/blog/{{ page.featured-image }}" alt="{{page.alt}}" /></span> -->
       {{content}}
 
       <!--<div class="row">
