--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,8 +16,8 @@
 		<h2>{{ site.title }}</h2>
 		<p>{{ site.description }}</p>
 		<ul class="actions">
-			<li><a href="aboutme.html" class="button special">Learn More</a></li>
-			<li><a href="blogindex.html" class="button">Blog</a></li>
+			<li><a href="{{ site.baseurl | prepend: site.url }}/aboutme.html" class="button special">Learn More</a></li>
+			<li><a href="{{ site.baseurl | prepend: site.url }}/blogindex.html" class="button">Blog</a></li>
 
 
 		</ul>
