--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -13,8 +13,8 @@
 			<a href="#" class="icon fa-angle-down">Menu</a>
 			<ul>
 				<li><a href="aboutme.html">About Me</a></li>
-				<li><a href="https://www.h3withlaura.com/blogindex.html">Blog</a></li>
-				<li><a href="elements.html">Recommended Items</a></li>
+				<li><a href="{{ site.baseurl | prepend: site.url }}//blogindex.html">Blog</a></li>
+				<li><a href="{{ site.baseurl | prepend: site.url }}/recommended-items.html">Recommended Items</a></li>
 				<li><a href="elements.html">Topic Tuesday Posts</a></li>
 				<li><a href="elements.html">Tip Thursday Posts</a></li>
 
