--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,10 @@
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-163356748-1"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
+
+		function gtag() {
+			dataLayer.push(arguments);
+		}
 		gtag('js', new Date());
 
 		gtag('config', 'UA-163356748-1');
@@ -16,5 +19,6 @@
 	<!--[if lte IE 8]><link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/assets/css/ie8.css" /><![endif]-->
 	<!-- Place your kit's code here -->
 	<script src="https://kit.fontawesome.com/dde3862630.js" crossorigin="anonymous"></script>
-
+	<!-- Favicon head tag -->
+	<link rel="icon" href="{{ site.url }}{{ site.baseurl }}/images/h3-logo.png" type="image/x-icon">
 </head>
