--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,6 +21,7 @@
 	<script src="https://kit.fontawesome.com/dde3862630.js" crossorigin="anonymous"></script>
 	<!-- Favicon head tag -->
 	<link rel="icon" href="{{ site.url }}{{ site.baseurl }}/images/h3-logo.png" type="image/x-icon">
+	<html lang="en”>...</html>
 
 	{% seo %}
 
