--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,29 +1,29 @@
+<html lang="en”>...</html>
+
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-163356748-1"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
+	<script async src=" https://www.googletagmanager.com/gtag/js?id=UA-163356748-1"> </script> <script>
+window.dataLayer = window.dataLayer || [];
 
-		function gtag() {
-			dataLayer.push(arguments);
-		}
-		gtag('js', new Date());
+function gtag() {
+dataLayer.push(arguments);
+}
+gtag('js', new Date());
 
-		gtag('config', 'UA-163356748-1');
-	</script>
-	<title>{{ site.title }}</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<!--[if lte IE 8]><script src="{{ site.url }}{{ site.baseurl }}/assets/js/ie/html5shiv.js"></script><![endif]-->
-	<link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/assets/css/main.css" />
-	<!--[if lte IE 8]><link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/assets/css/ie8.css" /><![endif]-->
-	<!-- Place your kit's code here -->
-	<script src="https://kit.fontawesome.com/dde3862630.js" crossorigin="anonymous"></script>
-	<!-- Favicon head tag -->
-	<link rel="icon" href="{{ site.url }}{{ site.baseurl }}/images/h3-logo.png" type="image/x-icon">
-	<html lang="en”>...</html>
+gtag('config', 'UA-163356748-1');
+</script>
+<title>{{ site.title }}</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<!--[if lte IE 8]><script src="{{ site.url }}{{ site.baseurl }}/assets/js/ie/html5shiv.js"></script><![endif]-->
+<link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/assets/css/main.css" />
+<!--[if lte IE 8]><link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/assets/css/ie8.css" /><![endif]-->
+<!-- Place your kit's code here -->
+<script src="https://kit.fontawesome.com/dde3862630.js" crossorigin="anonymous"></script>
+<!-- Favicon head tag -->
+<link rel="icon" href="{{ site.url }}{{ site.baseurl }}/images/h3-logo.png" type="image/x-icon">
 
-	{% seo %}
+{% seo %}
 
 
 </head>
