--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,7 +1,7 @@
 @import 'libs/vars';
 @import 'libs/functions';
 @import 'libs/mixins';
-@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,300italic,400italic");
+@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,300italic,400italic|Cormorant+Garamond:400,400i&display=swap");
 @import "comment-styles";
 
 /*
