--- a/_layouts/tagpage.html
+++ b/_layouts/tagpage.html
@@ -55,6 +55,8 @@ This will be the title -->
             faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio vis praesent.</p>
         </div>
       </div> -->
+      
+       <a href="{{ site.baseurl | prepend: site.url }}/blogindex.html">Back to Blog</a>
 
   </section>
 
