--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -59,10 +59,10 @@
         <section class="box">
           {% if page.previous.url %}
           <ul class="actions fit small">
-            <li><a class="button fit small" href="{{page.next.url}}">&laquo;&laquo;&laquo; Back</a></li>
+            <li><a class="button fit small" href="{{page.next.url}}">&laquo;&laquo;&laquo; Newer</a></li>
             {% endif %}
             {% if page.next.url %}
-            <li> <a class="button alt fit small" href="{{page.previous.url}}">Next &raquo;&raquo;&raquo;</a></li>
+            <li> <a class="button alt fit small" href="{{page.previous.url}}">Older &raquo;&raquo;&raquo;</a></li>
 
           </ul>
           {% endif %}
