--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -46,7 +46,7 @@
       </div> -->
       <small>
         {% for tag in page.tags %}
-        <a href="/tags/{{ tag }}/">{{ tag }}/ /</a>
+        <a href="/tags/{{ tag }}/">{{ tag }}.html /</a>
         {% endfor %}
 
 
