--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -44,7 +44,7 @@
             faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio vis praesent.</p>
         </div>
       </div> -->
-      <small>
+    <!--  <small>
         {% for tag in page.tags %}
         <a href="/tags/{{ tag }}/">{{ tag }}.html /</a>
         {% endfor %}
@@ -52,7 +52,7 @@
 
 
       </small>
-    </div>
+    </div> -->
     
     <!-- <div class="row"> -->
       <div class="12u">
