--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
 		<h2>{{ site.title }}</h2>
 		<p>{{ site.description }}</p>
 		<ul class="actions">
-			<li><a href="{{ site.baseurl | prepend: site.url }}/aboutme" class="button special">Learn More</a></li>
+			<li><a href="{{ site.baseurl | prepend: site.url }}/aboutme" class="button special">About Me</a></li>
 			<li><a href="{{ site.baseurl | prepend: site.url }}/blogindex" class="button">Blog</a></li>
 
 
