--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,7 +25,7 @@
 	<link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/assets/css/main.css" />
 	<!--[if lte IE 8]><link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/assets/css/ie8.css" /><![endif]-->
 	<!-- Place your kit's code here -->
-	<script src="https://kit.fontawesome.com/dde3862630.js" crossorigin="anonymous"></script>
+	<script async src="https://kit.fontawesome.com/dde3862630.js" crossorigin="anonymous"></script>
 	<!-- Favicon head tag -->
 	<link rel="icon" href="{{ site.url }}{{ site.baseurl }}/images/h3-logo.png" type="image/x-icon">
 
