--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -45,10 +45,11 @@
       <hr />
     </div>
 
-    <div class="box">
+    <div class="box" style="text-align:center">
+      <h4> Blog Posts </h4>
       <div class="row uniform 50%">
         <!--   <div class="post-nav"> -->
-        <div class="6u 12u(mobilep)">
+        <div class="6u 12u(mobilep)" style="text-align:left">
           {% if page.previous.url %}
           <p> <a href="{{page.previous.url}}">&#8672;&nbsp;{{page.previous.title}}</a> -- Previous </p>
           {% endif %}
