--- a/_layouts/tagpage.html
+++ b/_layouts/tagpage.html
@@ -3,7 +3,7 @@ layout: tags
 ---
 <ul>
   {% for post in site.tags[page.tag] %}
-  <li><a href="{{ post.url }}">{{ post.title }}</a>({{ post.date | date_to_string }})<br>
+  <li><a href="{{ post.url }}">{{ post.title }}</a> - {{ post.date | date_to_string }}<br>
     {{ post.description }}
   </li>
   {% endfor %}
