--- a/_includes/comment_form.html
+++ b/_includes/comment_form.html
@@ -58,7 +58,7 @@
 	</div>
 	<div class="mdl-card__supporting-text js-modal-text"></div>
 	<div class="mdl-card__actions mdl-card--border">
-		<button class="button mdl-button--colored mdl-js-button mdl-js-ripple-effect js-close-modal"></button>
+		<!-- <button class="button mdl-button--colored mdl-js-button mdl-js-ripple-effect js-close-modal"></button> -->
 	</div>
 </article>
 
