--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -28,7 +28,7 @@
       {% endif %}
 
       {{content}}
-      <!-- <section class="box"> -->
+
       {% for tag in page.tags %}
       {% capture tag_name %}{{ tag }}{% endcapture %}
       <a href="/tag/{{ tag_name }}"><code class="highligher-rouge">
@@ -36,32 +36,20 @@
         </code>&nbsp</a>
       {% endfor %}
 
-      <hr />
 
       <!-- <section class="box"> -->
       {% if page.comments == true %}
+      <hr />
       {% include comments.html %}
       {% endif %}
-      <hr />
     </div>
 
-    <div class="box" style="text-align:center">
-      <h4> Blog Posts </h4>
-      <div class="row uniform 50%">
-        <!--   <div class="post-nav"> -->
-        <div class="6u 12u(mobilep)" style="text-align:left">
-          {% if page.previous.url %}
-          <p>Previous</p>
-          <a href="{{page.previous.url}}">&#8672;&nbsp;{{page.previous.title}}</a>
-          {% endif %}
-        </div>
-        <div class="6u 12u(mobilep)" style="text-align:right">
-          {% if page.next.url %}
-          <p>Next</p>
-          <a href="{{page.next.url}}">{{page.next.title}}&nbsp;&#8674;</a>
-          {% endif %}
-        </div>
-      </div>
+    <!-- Add Blog Nav -->
+    {% if page.comments == true %}
+    <hr />
+    {% include blogpost-nav.html %}
+    {% endif %}
+
   </section>
 
 
