--- a/_includes/blogpost-nav.html
+++ b/_includes/blogpost-nav.html
@@ -4,14 +4,54 @@
     <!--   <div class="post-nav"> -->
     <div class="6u 12u(mobilep)" style="text-align:left">
       {% if page.previous.url %}
-      <p>Previous</p>
+      Previous<br>
       <a href="{{page.previous.url}}">&#8672;&nbsp;{{page.previous.title}}</a>
       {% endif %}
     </div>
     <div class="6u 12u(mobilep)" style="text-align:right">
       {% if page.next.url %}
-      <p>Next</p>
+      Next<br>
       <a href="{{page.next.url}}">{{page.next.title}}&nbsp;&#8674;</a>
       {% endif %}
     </div>
+  </div>
+
+  <hr />
+
+  <h4> Related Posts</h4>
+  <div class="rect">
+
+    {% assign maxRelated = 3 %}
+    {% assign minCommonTags =  1 %}
+    {% assign maxRelatedCounter = 0 %}
+
+
+    {% for post in site.posts %}
+
+
+    {% assign sameTagCount = 0 %}
+    {% assign commonTags = '' %}
+
+    {% for tag in post.tags %}
+    {% if post.url != page.url %}
+    {% if page.tags contains tag %}
+    {% assign sameTagCount = sameTagCount | plus: 1 %}
+    {% capture tagmarkup %} <span class="label label-default">{{ tag }}</span> {% endcapture %}
+    {% assign commonTags = commonTags | append: tagmarkup %}
+    {% endif %}
+    {% endif %}
+    {% endfor %}
+
+    {% if sameTagCount >= minCommonTags %}
+
+    <a href="{{ site.baseurl }}{{ post.url }}">
+      {{ post.title }}
+    </a> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+
+    {% assign maxRelatedCounter = maxRelatedCounter | plus: 1 %}
+    {% if maxRelatedCounter >= maxRelated %}
+    {% break %}
+    {% endif %}
+    {% endif %}
+    {% endfor %}
   </div>
