--- a/_layouts/aboutme.html
+++ b/_layouts/aboutme.html
@@ -25,7 +25,9 @@
       <p> {{ page.subtitle }}</p>
     </header>
     <div class="box">
-      <span class="image featured"><img src="{{ site.url }}{{ site.baseurl }}/images/{{ page.featured-image }}" alt="{{page.alt}}" /></span>
+      <span class="image featured"><img
+          src="https://res.cloudinary.com/rockmonkey/image/upload/dpr_auto,f_auto,fl_any_format.fast_scale.force_strip.immutable_cache.progressive.progressive:semi.progressive:steep,q_auto/v1587782942/{{ page.featured-image }}"
+          alt="{{page.alt}}" /></span>
       {{content}}
 
       <!--<div class="row">
