--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -13,7 +13,7 @@
 			<a href="#" class="icon fa-angle-down">Menu</a>
 			<ul>
 				<li><a href="{{ site.baseurl | prepend: site.url }}/aboutme">About Me</a></li>
-				<li><a href="{{ site.baseurl | prepend: site.url }}/blogindex">Blog</a></li>
+				<li><a href="{{ site.baseurl | prepend: site.url }}/blog">Blog</a></li>
 				<li><a href="{{ site.baseurl | prepend: site.url }}/recommended-items">Recommended Items</a></li>
 				<li><a href="{{ site.baseurl | prepend: site.url }}/tag/topic-tuesday">Topic Tuesday Posts</a></li>
 				<li><a href="{{ site.baseurl | prepend: site.url }}/tag/tip-thursday">Tip Thursday Posts</a></li>
