--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
 		<p>{{ site.description }}</p>
 		<ul class="actions">
 			<li><a href="{{ site.baseurl | prepend: site.url }}/aboutme" class="button special">About Me</a></li>
-			<li><a href="{{ site.baseurl | prepend: site.url }}/blogindex" class="button">Blog</a></li>
+			<li><a href="{{ site.baseurl | prepend: site.url }}/blog" class="button">Blog</a></li>
 
 
 		</ul>
