--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -13,12 +13,6 @@
 <body>
   {% include header.html %}
 
-  <!--  {% if page.featured-image %}
-  <span class="image featured">
-    <img src="{{ page.featured-image }}" alt="">
-  </span>
-  {% endif %} -->
-
   <section id="main" class="container">
     <header>
       <h2>{{ page.title }}</h2>
@@ -27,7 +21,7 @@
     <div class="box">
       <!-- <span class="image featured"><img src="{{ page.featured-image }}" alt="{{page.alt}}" /></span> -->
       {% if page.featured-image %}
-      <span class="image featured"><img src="{{ site.url }}{{ site.baseurl }}/images/blog/{{ page.featured-image }}" alt="{{page.alt}}" /></span>
+      <span class="image featured"><img src="https://res.cloudinary.com/rockmonkey/image/upload/dpr_auto,f_auto,fl_any_format.fast_scale.force_strip.immutable_cache.progressive.progressive:semi.progressive:steep,q_auto/v1587782942/{{ page.featured-image }}" alt="{{page.alt}}" /></span>
       {% endif %}
 
       {{content}}
