--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,8 +19,10 @@
 		gtag('config', 'UA-163356748-1');
 	</script>
 	<title>{{ site.title }}</title>
+	<meta http-equiv="Content-Security-Policy" content="default-src https:">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+
 	<!--[if lte IE 8]><script src="{{ site.url }}{{ site.baseurl }}/assets/js/ie/html5shiv.js"></script><![endif]-->
 	<link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/assets/css/main.css" />
 	<!--[if lte IE 8]><link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/assets/css/ie8.css" /><![endif]-->
