--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -2,7 +2,7 @@
 
 	<ul>
 		<!--	<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li> -->
-		<li><a href="https://www.facebook.com/lauramsanders/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+		<li><a href="https://www.facebook.com/h3withlaura" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 		<li><a href="https://www.instagram.com/lauramsanders/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 		<!-- <li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
 			<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
