--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -40,6 +40,7 @@
           <nobr>{{ tag_name }}</nobr>
         </code>&nbsp</a>
       {% endfor %}
+    </div>
 
 
       <!-- <section class="box"> -->
