--- a/_includes/comment_form.html
+++ b/_includes/comment_form.html
@@ -20,8 +20,8 @@
 	<fieldset>
 		<div class="textfield">
 			<label for="comment-form-name">Name
-				<input class="textfield__input" name="fields[name]" type="text" id="comment-form-name" placeholder="Your name" />
-			</label>
+				<textarea class="textfield__input" name="fields[name]" type="text" id="comment-form-name" placeholder="Your name" />
+				</label>
 		</div>
 	</fieldset>
 
