--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -41,13 +41,14 @@
         </code>&nbsp</a>
       {% endfor %}
     </div>
+    </div>
 
 
-      <!-- <section class="box"> -->
-      {% if page.comments == true %}
-      <hr />
-      {% include comments.html %}
-      {% endif %}
+    <!-- <section class="box"> -->
+    {% if page.comments == true %}
+    <hr />
+    {% include comments.html %}
+    {% endif %}
     </div>
 
     <!-- Add Blog Nav -->
