--- a/_includes/head.html
+++ b/_includes/head.html
@@ -42,6 +42,12 @@
 			document.getElementsByTagName('head')[0].appendChild(css);
 		})();
 	</script>
+	<script src="algolia.js" async></script>
+
+	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/instantsearch.js@2.10.4/dist/instantsearch.min.css">
+<script src="https://cdn.jsdelivr.net/npm/instantsearch.js@2.10.4"></script>
+
+
 
 
 	{% seo %}
