--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -58,6 +58,10 @@
 
   </section>
 
+  {% if page.alt == blank %}
+  https://res.cloudinary.com/rockmonkey/image/upload/v1587782937/Blog/Burger-Up-Salad_w1gncd.jpg
+  {% endif %}
+
 
   {% include cta.html %}
   {% include footer.html %}
