--- a/_layouts/christmas.html
+++ b/_layouts/christmas.html
@@ -9,6 +9,7 @@
 <html lang="en">
 
 {% include head.html %}
+<script data-name="BMC-Widget" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="h3withlaura" data-description="Support me on Buy me a coffee!" data-message="Thank you for visiting. You can now buy me a coffee!" data-color="#f4f1ec" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
 
 <body>
   {% include header.html %}
@@ -42,7 +43,6 @@
             faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio vis praesent.</p>
         </div>
       </div> -->
-
     </div>
     {% if page.comments == true %}
     {% include comments.html %}
