--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -11,7 +11,7 @@
 
 
 		<li><a href="{{ site.baseurl | prepend: site.url }}">Home</a></li>
-		<li><a href="{{ site.baseurl | prepend: site.url }}/christmas">Christmas Treats E-Book!</a></li>
+		<li><a href="{{ site.baseurl | prepend: site.url }}/christmas">Christmas Treats E-Book</a></li>
 
 		<li>
 			<a href="#" class="icon fa-angle-down">Menu</a>
