--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -38,6 +38,6 @@
 				</li>
 			</ul>
 		</li>
-		 <li><a href="{{ site.baseurl | prepend: site.url }}/search" class="icon fas fa-search"></a></li>
+		 <li><a href="{{ site.baseurl | prepend: site.url }}/search" class="icon fas fa-search"><span class="label">Search</span></a></li>
 	</ul>
 </nav>
