--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,51 +1,65 @@
 <!-- Footer -->
 <footer id="footer">
-
-	<ul class="icons">
-		<!--	<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li> -->
-		<li><a href="https://www.facebook.com/h3withlaura" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-		<li><a href="https://www.instagram.com/lauramsanders/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-		<li><a href="mailto:laura@h3withlaura.com?subject=H3 Website" class="icon fas fa-envelope-square"><span class="label">Email</span></a></li>
-	</ul>
-	<ul class="icons">
-		<li>
-			<form method="post" action="https://feedburner.google.com/fb/a/mailverify" method="post" target="popupwindow"
-				onsubmit="window.open('https://feedburner.google.com/fb/a/mailverify?uri=h3withlaura', 'popupwindow', 'scrollbars=yes,width=550,height=520');return true">
-				<input type="hidden" value="h3withlaura" name="uri" />
-
-				<input type="hidden" name="loc" value="en_US" />
-				<input type="text" name="email" id="query" value="" placeholder="Enter your Email!" class="button alt small" />
-		</li>
-		<li>
-			<input type="submit" value="Subscribe" class="button alt small" />
-
-		</li>
-		</form>
-
-		<!-- <li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-		<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-		<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li> -->
-		</li>
-	</ul>
-
-
-
+	<div itemscope itemtype="https://schema.org/Organization">
+		<meta itemprop="name" content="{{ site.title }}">
+		<link itemprop="url" href="{{ site.url }}{{ site.baseurl }}">
+		<ul class="icons">
+			{% if site.facebook_URL %}
+			<li><a href="{{ site.facebook_URL }}" class="icon brands fa-facebook-f" itemprop="sameAs" rel="me noopener" target="_blank" aria-label="Facebook"><span class="label">Facebook</span></a></li>
+			{% endif %}
+			{% if site.instagram_username %}
+			<li><a href="https://instagram.com/{{ site.instagram_username }}" class="icon brands fa-instagram" itemprop="sameAs" rel="me noopener" target="_blank" aria-label="Instagram"><span class="label">Instagram</span></a></li>
+			{% endif %}
+			{% if site.github_username %}
+			<li><a href="https://github.com/{{ site.github_username }}" class="icon brands fa-github" itemprop="sameAs" rel="me noopener" target="_blank" aria-label="GitHub"><span class="label">GitHub</span></a></li>
+			{% endif %}
+			<li><a href="{{ '/feed.xml' | relative_url }}" class="icon solid fa-rss" aria-label="RSS Feed"><span class="label">RSS</span></a></li>
+		</ul>
+	</div>
+	
 	<ul class="copyright">
-		<li><a href="https://h3withlaura.com"> &copy; 2020 {{ site.title }}. All rights reserved.</a></li>
+		<li>&copy; {{ site.time | date: '%Y' }} {{ site.title }}. All rights reserved.</li>
+		<li><a href="{{ '/sitemap.xml' | relative_url }}" rel="nofollow">Sitemap</a></li>
+		<li><a href="http://buymeacoffee.com/h3withlaura" rel="nofollow noopener" target="_blank">Support Me</a></li>
 	</ul>
+	
+	<!-- Structured data for the website - important for SEO -->
+	<script type="application/ld+json">
+	{
+		"@context": "https://schema.org",
+		"@type": "WebSite",
+		"name": "{{ site.title }}",
+		"url": "{{ site.url }}{{ site.baseurl }}",
+		"description": "{{ site.description }}",
+		"potentialAction": {
+			"@type": "SearchAction",
+			"target": "{{ site.url }}{{ site.baseurl }}/search?q={search_term_string}",
+			"query-input": "required name=search_term_string"
+		}
+	}
+	</script>
 </footer>
 
-
 <!-- Scripts -->
-<script src="{{ site.url }}{{ site.baseurl }}/assets/js/jquery.min.js"></script>
-<script src="{{ site.url }}{{ site.baseurl }}/assets/js/jquery.dropotron.min.js"></script>
-<script src="{{ site.url }}{{ site.baseurl }}/assets/js/jquery.scrollgress.min.js"></script>
-<script src="{{ site.url }}{{ site.baseurl }}/assets/js/skel.min.js"></script>
-<script src="{{ site.url }}{{ site.baseurl }}/assets/js/util.js"></script>
-<!--[if lte IE 8]><script src="{{ site.url }}{{ site.baseurl }}/assets/js/ie/respond.min.js"></script><![endif]-->
-<script src="{{ site.url }}{{ site.baseurl }}/assets/js/main.js"></script>
-<script src="{{ site.url }}{{ site.baseurl }}/assets/js/lazysizes.min.js"></script>
+<script src="{{ 'assets/js/jquery.min.js' | relative_url }}"></script>
+<script src="{{ 'assets/js/jquery.dropotron.min.js' | relative_url }}"></script>
+<script src="{{ 'assets/js/jquery.scrollgress.min.js' | relative_url }}"></script>
+<script src="{{ 'assets/js/browser.min.js' | relative_url }}"></script>
+<script src="{{ 'assets/js/breakpoints.min.js' | relative_url }}"></script>
+<script src="{{ 'assets/js/util.js' | relative_url }}"></script>
+<script src="{{ 'assets/js/main.js' | relative_url }}"></script>
+<script src="https://cdn.jsdelivr.net/npm/lazysizes@5.3.2/lazysizes.min.js" async></script>
 
+{% if site.google_analytics %}
+<!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
+<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+	gtag('config', '{{ site.google_analytics }}');
+</script>
+{% endif %}
 
 </body>
 
