--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,14 +18,65 @@
 
 		gtag('config', 'UA-163356748-1');
 	</script>
-	<title>{{ site.title }}</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-
-	<!--[if lte IE 8]><script src="{{ site.url }}{{ site.baseurl }}/assets/js/ie/html5shiv.js"></script><![endif]-->
-	<link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/assets/css/main.css" />
-	<!--[if lte IE 8]><link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/assets/css/ie8.css" /><![endif]-->
-	<!-- Place your kit's code here -->
+	<title>{% if page.title %}{{ page.title }} | {{ site.title }}{% else %}{{ site.title }}{% endif %}</title>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="title" content="{% if page.title %}{{ page.title }} | {{ site.title }}{% else %}{{ site.title }}{% endif %}">
+	<meta name="description" content="{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+	{% if site.seo.keywords %}<meta name="keywords" content="{{ site.seo.keywords | strip_html | strip_newlines }}">{% endif %}
+	<meta name="author" content="{% if page.author %}{{ page.author }}{% else %}{{ site.author }}{% endif %}">
+	<link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
+	<meta property="og:type" content="{% if page.layout == 'post' %}article{% else %}website{% endif %}">
+	<meta property="og:url" content="{{ page.url | replace:'index.html','' | absolute_url }}">
+	<meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
+	<meta property="og:description" content="{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+	<meta property="og:image" content="{% if page.image %}{{ page.image | absolute_url }}{% else %}{{ site.defaults[0].values.image | absolute_url }}{% endif %}">
+	{% if site.facebook.app_id %}<meta property="fb:app_id" content="{{ site.facebook.app_id }}">{% endif %}
+	<meta property="twitter:card" content="summary_large_image">
+	<meta property="twitter:url" content="{{ page.url | replace:'index.html','' | absolute_url }}">
+	<meta property="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
+	<meta property="twitter:description" content="{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+	<meta property="twitter:image" content="{% if page.image %}{{ page.image | absolute_url }}{% else %}{{ site.defaults[0].values.image | absolute_url }}{% endif %}">
+	<script type="application/ld+json">
+	{
+	  "@context": "https://schema.org",
+	  "@type": "{% if page.layout == 'post' %}{{ site.schema.type }}{% else %}WebSite{% endif %}",
+	  "headline": "{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}",
+	  "image": "{% if page.image %}{{ page.image | absolute_url }}{% else %}{{ site.defaults[0].values.image | absolute_url }}{% endif %}",
+	  "author": {
+		"@type": "Person",
+		"name": "{% if page.author %}{{ page.author }}{% else %}{{ site.author }}{% endif %}"
+	  },
+	  "publisher": {
+		"@type": "Organization",
+		"name": "{{ site.schema.publisher.name }}",
+		"logo": {
+		  "@type": "ImageObject",
+		  "url": "{{ site.schema.publisher.logo.url | absolute_url }}"
+		}
+	  },
+	  "url": "{{ page.url | replace:'index.html','' | absolute_url }}",
+	  "description": "{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}"{% if page.layout == 'post' %},
+	  "datePublished": "{{ page.date | date_to_xmlschema }}",
+	  "dateModified": "{% if page.last_modified_at %}{{ page.last_modified_at | date_to_xmlschema }}{% else %}{{ page.date | date_to_xmlschema }}{% endif %}"{% endif %}
+	}
+	</script>
+	<link rel="apple-touch-icon" sizes="180x180" href="{{ '/assets/images/apple-touch-icon.png' | relative_url }}">
+	<link rel="icon" type="image/png" sizes="32x32" href="{{ '/assets/images/favicon-32x32.png' | relative_url }}">
+	<link rel="icon" type="image/png" sizes="16x16" href="{{ '/assets/images/favicon-16x16.png' | relative_url }}">
+	<link rel="manifest" href="{{ '/assets/images/site.webmanifest' | relative_url }}">
+	<link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
+	{% if page.custom_css %}
+	  {% for stylesheet in page.custom_css %}
+		<link rel="stylesheet" href="{{ stylesheet | relative_url }}">
+	  {% endfor %}
+	{% endif %}
+	{% if page.custom_js %}
+	  {% for js_file in page.custom_js %}
+		<script src="{{ js_file | relative_url }}" type="text/javascript"></script>
+	  {% endfor %}
+	{% endif %}
 	<script src="lazysizes.min.js" async></script>
 	<script async src="https://kit.fontawesome.com/dde3862630.js" crossorigin="anonymous"></script>
 	<!-- Favicon head tag -->
@@ -45,9 +96,4 @@
 <script data-name="BMC-Widget" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="h3withlaura" data-description="Support me on Buy me a coffee!" data-message="Thank you for visiting. Feel free to donate a coffee if you find value in the content!" data-color="#f0f0f0" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
 
 	{% seo %}
-	{% if page.image %}
-  <meta property="og:image" content={{ page.image }}>
-{% else %}
-  <meta property="og:image" content=https://res.cloudinary.com/rockmonkey/image/upload/v1587782937/Blog/Burger-Up-Salad_w1gncd.jpg>
-{% endif %}
 </head>
