--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 
 <!--
 	Alpha by HTML5 UP
@@ -9,15 +9,48 @@
 {% include head.html %}
 
 <body class="landing">
-
-  {% include header.html %}
-
-  {{ content }}
-
-  {% include cta.html %}
-  {% include footer.html %}
-
-
+    <div id="page-wrapper">
+        {% include header.html %}
+        {{ content }}
+        {% include footer.html %}
+    </div>
+    
+    <!-- Schema.org structured data for breadcrumbs -->
+    {% if page.url != "/" %}
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+            {
+                "@type": "ListItem",
+                "position": 1,
+                "name": "Home",
+                "item": "{{ site.url }}{{ site.baseurl }}/"
+            },
+            {% if page.layout == "post" %}
+            {
+                "@type": "ListItem",
+                "position": 2,
+                "name": "Blog",
+                "item": "{{ site.url }}{{ site.baseurl }}/blog/"
+            },
+            {
+                "@type": "ListItem",
+                "position": 3,
+                "name": "{{ page.title }}"
+            }
+            {% else %}
+            {
+                "@type": "ListItem",
+                "position": 2,
+                "name": "{{ page.title }}"
+            }
+            {% endif %}
+        ]
+    }
+    </script>
+    {% endif %}
 </body>
 
 </html>
