Revert "Merge branch 'master' of https://github.com/rockmonkey4004/h3"
This reverts commit fd8ccc568356dae34006b31f6a2f7612fcdd38eb, reversing
changes made to e0a5583451930a4affde89256784a7cdb1069154.

--- a/_includes/head-search.html
+++ b/_includes/head-search.html
@@ -6,16 +6,18 @@
 	{% include collecttags.html %}
 	{% endif %}
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-CJZCQWFC20"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src=" https://www.googletagmanager.com/gtag/js?id=UA-163356748-1"> </script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
 
-  gtag('config', 'G-CJZCQWFC20');
-</script>
-	
+		function gtag() {
+			dataLayer.push(arguments);
+		}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-163356748-1');
+	</script>
 	<title>{{ site.title }}</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
