--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -26,20 +26,34 @@
       <!-- <span class="image featured"><img src="{{ page.featured-image }}" alt="{{page.alt}}" /></span> -->
       {% if page.featured-image %}
       <!--  <span class="image featured"><img src="{{ site.url }}{{ site.baseurl }}/images/blog/{{ page.featured-image }}" alt="{{page.alt}}" /></span> -->
-      <span class="image featured"><img
-          src="https://res.cloudinary.com/rockmonkey/image/upload/dpr_auto,f_auto,fl_any_format.fast_scale.force_strip.immutable_cache.progressive.progressive:semi.progressive:steep,q_auto/v1587782942/{{ page.featured-image }}"
-          alt="{{page.alt}}" /></span>
+      <span class="image featured">
+        <img class="lazyload"
+          src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+          data-src="https://res.cloudinary.com/rockmonkey/image/upload/f_auto,w_1200,q_auto:good/v1587782942/{{ page.featured-image }}"
+          data-srcset="https://res.cloudinary.com/rockmonkey/image/upload/f_auto,w_400,q_auto:good/v1587782942/{{ page.featured-image }} 400w,
+                    https://res.cloudinary.com/rockmonkey/image/upload/f_auto,w_800,q_auto:good/v1587782942/{{ page.featured-image }} 800w,
+                    https://res.cloudinary.com/rockmonkey/image/upload/f_auto,w_1200,q_auto:good/v1587782942/{{ page.featured-image }} 1200w"
+          data-sizes="auto"
+          alt="{{page.alt | default: page.title }}" 
+          width="1200" 
+          height="800"
+          loading="lazy" />
+      </span>
 
       {% endif %}
 
-      {{content}}
+      <article class="blog-content">
+        {{content}}
+      </article>
 
-      {% for tag in page.tags %}
-      {% capture tag_name %}{{ tag }}{% endcapture %}
-      <a href="/tag/{{ tag_name }}"><code class="highligher-rouge">
-          <nobr>{{ tag_name }}</nobr>
-        </code>&nbsp</a>
-      {% endfor %}
+      <div class="tag-container">
+        {% for tag in page.tags %}
+        {% capture tag_name %}{{ tag }}{% endcapture %}
+        <a href="/tag/{{ tag_name }}" class="tag-link"><code class="tag-code">
+            <nobr>{{ tag_name }}</nobr>
+          </code></a>
+        {% endfor %}
+      </div>
     </div>
 
 
@@ -65,3 +79,29 @@
 
   {% include cta.html %}
   {% include footer.html %}
+
+  <!-- Recipe Schema if it's a recipe post (if contains "ingredients" and "instructions" in tags) -->
+  {% if page.tags contains "recipes" %}
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org/",
+    "@type": "Recipe",
+    "name": "{{ page.title }}",
+    "image": [
+      "https://res.cloudinary.com/rockmonkey/image/upload/f_auto,w_1200,q_auto:good/v1587782942/{{ page.featured-image }}"
+    ],
+    "author": {
+      "@type": "Person",
+      "name": "{{ site.author }}"
+    },
+    "datePublished": "{{ page.date | date_to_xmlschema }}",
+    "description": "{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}",
+    "recipeCategory": "{% for tag in page.tags %}{{ tag }}{% unless forloop.last %}, {% endunless %}{% endfor %}",
+    "recipeCuisine": "Paleo",
+    "keywords": "{% for tag in page.tags %}{{ tag }}{% unless forloop.last %}, {% endunless %}{% endfor %}",
+    "recipeYield": "2-4 servings"
+  }
+  </script>
+  {% endif %}
+</body>
+</html>
