--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -29,10 +29,10 @@
       <span class="image featured">
         <img class="lazyload"
           src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-          data-src="https://res.cloudinary.com/rockmonkey/image/upload/f_auto,w_1200,q_auto:good/v1587782942/{{ page.featured-image }}"
-          data-srcset="https://res.cloudinary.com/rockmonkey/image/upload/f_auto,w_400,q_auto:good/v1587782942/{{ page.featured-image }} 400w,
-                    https://res.cloudinary.com/rockmonkey/image/upload/f_auto,w_800,q_auto:good/v1587782942/{{ page.featured-image }} 800w,
-                    https://res.cloudinary.com/rockmonkey/image/upload/f_auto,w_1200,q_auto:good/v1587782942/{{ page.featured-image }} 1200w"
+          data-src="https://res.cloudinary.com/rockmonkey/image/upload/dpr_auto,f_auto,fl_any_format.fast_scale.force_strip.immutable_cache.progressive.progressive:semi.progressive:steep,q_auto/v1587782942/{{ page.featured-image }}"
+          data-srcset="https://res.cloudinary.com/rockmonkey/image/upload/dpr_auto,f_auto,fl_any_format.fast_scale.force_strip.immutable_cache.progressive.progressive:semi.progressive:steep,q_auto,w_400/v1587782942/{{ page.featured-image }} 400w,
+                    https://res.cloudinary.com/rockmonkey/image/upload/dpr_auto,f_auto,fl_any_format.fast_scale.force_strip.immutable_cache.progressive.progressive:semi.progressive:steep,q_auto,w_800/v1587782942/{{ page.featured-image }} 800w,
+                    https://res.cloudinary.com/rockmonkey/image/upload/dpr_auto,f_auto,fl_any_format.fast_scale.force_strip.immutable_cache.progressive.progressive:semi.progressive:steep,q_auto,w_1200/v1587782942/{{ page.featured-image }} 1200w"
           data-sizes="auto"
           alt="{{page.alt | default: page.title }}" 
           width="1200" 
@@ -88,7 +88,7 @@
     "@type": "Recipe",
     "name": "{{ page.title }}",
     "image": [
-      "https://res.cloudinary.com/rockmonkey/image/upload/f_auto,w_1200,q_auto:good/v1587782942/{{ page.featured-image }}"
+      "https://res.cloudinary.com/rockmonkey/image/upload/dpr_auto,f_auto,fl_any_format.fast_scale.force_strip.immutable_cache.progressive.progressive:semi.progressive:steep,q_auto/v1587782942/{{ page.featured-image }}"
     ],
     "author": {
       "@type": "Person",
