--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -43,8 +43,13 @@
       {% endif %}
 
       <article class="blog-content">
+        {% if page.toc %}
+        {% include toc.html %}
+        {% endif %}
         {{content}}
       </article>
+
+      {% include social-share.html %}
 
       <div class="tag-container">
         {% for tag in page.tags %}
@@ -54,6 +59,8 @@
           </code></a>
         {% endfor %}
       </div>
+
+      {% include related-posts.html %}
     </div>
 
 
@@ -100,6 +107,36 @@
     "recipeCuisine": "Paleo",
     "keywords": "{% for tag in page.tags %}{{ tag }}{% unless forloop.last %}, {% endunless %}{% endfor %}",
     "recipeYield": "2-4 servings"
+  }
+  </script>
+  {% else %}
+  <!-- Article Schema for non-recipe posts -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Article",
+    "headline": "{{ page.title }}",
+    "image": "https://res.cloudinary.com/rockmonkey/image/upload/dpr_auto,f_auto,fl_any_format.fast_scale.force_strip.immutable_cache.progressive.progressive:semi.progressive:steep,q_auto/v1587782942/{{ page.featured-image }}",
+    "author": {
+      "@type": "Person",
+      "name": "{{ site.author }}"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "{{ site.title }}",
+      "logo": {
+        "@type": "ImageObject",
+        "url": "{{ site.schema.publisher.logo.url }}"
+      }
+    },
+    "datePublished": "{{ page.date | date_to_xmlschema }}",
+    "dateModified": "{% if page.last_modified_at %}{{ page.last_modified_at | date_to_xmlschema }}{% else %}{{ page.date | date_to_xmlschema }}{% endif %}",
+    "description": "{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "{{ page.url | replace:'index.html','' | absolute_url }}"
+    },
+    "keywords": "{% for tag in page.tags %}{{ tag }}{% unless forloop.last %}, {% endunless %}{% endfor %}"
   }
   </script>
   {% endif %}
