--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,129 +6,48 @@
 	{% include collecttags.html %}
 	{% endif %}
 
-	<!-- Preconnect to critical domains -->
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
-	<link rel="preconnect" href="https://www.googletagmanager.com" crossorigin>
-	<link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
-
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-CJZCQWFC20"></script>
+	<script async src=" https://www.googletagmanager.com/gtag/js?id=UA-163356748-1"> </script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
+
 		function gtag() {
 			dataLayer.push(arguments);
 		}
 		gtag('js', new Date());
-		gtag('config', 'G-CJZCQWFC20'); // GA4 measurement ID
-	</script>
-	
-	<title>{% if page.title %}{{ page.title }} | {{ site.title }}{% else %}{{ site.title }}{% endif %}</title>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="title" content="{% if page.title %}{{ page.title }} | {{ site.title }}{% else %}{{ site.title }}{% endif %}">
-	<meta name="description" content="{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
-	{% if site.seo.keywords %}<meta name="keywords" content="{{ site.seo.keywords | strip_html | strip_newlines }}">{% endif %}
-	<meta name="author" content="{% if page.author %}{{ page.author }}{% else %}{{ site.author }}{% endif %}">
-	
-	<!-- Canonical URL -->
-	<link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
-	
-	<!-- RSS Feed -->
-	<link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ '/feed.xml' | absolute_url }}">
-	
-	<!-- Open Graph / Facebook -->
-	<meta property="og:type" content="{% if page.layout == 'post' %}article{% else %}website{% endif %}">
-	<meta property="og:url" content="{{ page.url | replace:'index.html','' | absolute_url }}">
-	<meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
-	<meta property="og:description" content="{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
-	<meta property="og:image" content="{% if page.image %}{{ page.image | absolute_url }}{% else %}{{ site.defaults[0].values.image | absolute_url }}{% endif %}">
-	{% if site.facebook.app_id %}<meta property="fb:app_id" content="{{ site.facebook.app_id }}">{% endif %}
-	
-	<!-- Twitter -->
-	<meta property="twitter:card" content="summary_large_image">
-	<meta property="twitter:url" content="{{ page.url | replace:'index.html','' | absolute_url }}">
-	<meta property="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
-	<meta property="twitter:description" content="{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
-	<meta property="twitter:image" content="{% if page.image %}{{ page.image | absolute_url }}{% else %}{{ site.defaults[0].values.image | absolute_url }}{% endif %}">
-	
-	<!-- Schema.org structured data -->
-	<script type="application/ld+json">
-	{
-	  "@context": "https://schema.org",
-	  "@type": "{% if page.layout == 'post' %}{{ site.schema.type }}{% else %}WebSite{% endif %}",
-	  "headline": "{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}",
-	  "image": "{% if page.image %}{{ page.image | absolute_url }}{% else %}{{ site.defaults[0].values.image | absolute_url }}{% endif %}",
-	  "author": {
-		"@type": "Person",
-		"name": "{% if page.author %}{{ page.author }}{% else %}{{ site.author }}{% endif %}"
-	  },
-	  "publisher": {
-		"@type": "Organization",
-		"name": "{{ site.schema.publisher.name }}",
-		"logo": {
-		  "@type": "ImageObject",
-		  "url": "{{ site.schema.publisher.logo.url | absolute_url }}"
-		}
-	  },
-	  "url": "{{ page.url | replace:'index.html','' | absolute_url }}",
-	  "description": "{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}"{% if page.layout == 'post' %},
-	  "datePublished": "{{ page.date | date_to_xmlschema }}",
-	  "dateModified": "{% if page.last_modified_at %}{{ page.last_modified_at | date_to_xmlschema }}{% else %}{{ page.date | date_to_xmlschema }}{% endif %}"{% endif %}
-	}
-	</script>
 
-	<!-- Website Schema -->
-	{% if page.url == '/' %}
-	<script type="application/ld+json">
-	{
-	  "@context": "https://schema.org",
-	  "@type": "WebSite",
-	  "url": "{{ site.url }}{{ site.baseurl }}/",
-	  "name": "{{ site.title }}",
-	  "description": "{{ site.description }}",
-	  "potentialAction": {
-		"@type": "SearchAction",
-		"target": "{{ site.url }}{{ site.baseurl }}/search?q={search_term_string}",
-		"query-input": "required name=search_term_string"
-	  }
-	}
+		gtag('config', 'UA-163356748-1');
 	</script>
-	{% endif %}
+	<title>{{ site.title }}</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-	<!-- Favicon / App Icons -->
-	<link rel="apple-touch-icon" sizes="180x180" href="{{ '/assets/images/apple-touch-icon.png' | relative_url }}">
-	<link rel="icon" type="image/png" sizes="32x32" href="{{ '/assets/images/favicon-32x32.png' | relative_url }}">
-	<link rel="icon" type="image/png" sizes="16x16" href="{{ '/assets/images/favicon-16x16.png' | relative_url }}">
-	<link rel="manifest" href="{{ '/assets/images/site.webmanifest' | relative_url }}">
-	
-	<!-- Stylesheets -->
-	<link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
-	{% if page.custom_css %}
-	  {% for stylesheet in page.custom_css %}
-		<link rel="stylesheet" href="{{ stylesheet | relative_url }}">
-	  {% endfor %}
-	{% endif %}
-	
-	<!-- JavaScript -->
-	{% if page.custom_js %}
-	  {% for js_file in page.custom_js %}
-		<script src="{{ js_file | relative_url }}" type="text/javascript" defer></script>
-	  {% endfor %}
-	{% endif %}
-	
-	<!-- LazySizes for image lazy loading -->
-	<script src="{{ '/assets/js/lazysizes.min.js' | relative_url }}" async></script>
-	
-	<!-- Font Awesome -->
+	<!--[if lte IE 8]><script src="{{ site.url }}{{ site.baseurl }}/assets/js/ie/html5shiv.js"></script><![endif]-->
+	<link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/assets/css/main.css" />
+	<!--[if lte IE 8]><link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/assets/css/ie8.css" /><![endif]-->
+	<!-- Place your kit's code here -->
+	<script src="lazysizes.min.js" async></script>
 	<script async src="https://kit.fontawesome.com/dde3862630.js" crossorigin="anonymous"></script>
-	
 	<!-- Favicon head tag -->
-	<link rel="icon" href="https://res.cloudinary.com/rockmonkey/image/upload/dpr_auto,f_auto,fl_any_format.fast_scale.force_strip.immutable_cache.progressive.progressive:semi.progressive:steep,q_auto/v1587782942/h3-logo_orvt5o.png" type="image/x-icon">
+	<link rel="icon" href="https://res.cloudinary.com/rockmonkey/image/upload/dpr_auto,f_auto,fl_any_format.fast_scale.force_strip.immutable_cache.progressive.progressive:semi.progressive:steep,q_auto/v1587782942/h3-logo_orvt5o.png"
+		type="image/x-icon">
 
-	<!-- Buy Me A Coffee Widget -->
-	<script data-name="BMC-Widget" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="h3withlaura" data-description="Support me on Buy me a coffee!" data-message="Thank you for visiting. Feel free to donate a coffee if you find value in the content!" data-color="#f0f0f0" data-position="Right" data-x_margin="18" data-y_margin="18" defer></script>
+	<!-- load main.css -->
+	<script>
+		(function() {
+			var cssMain = document.createElement('link');
+			cssMain.href = 'assets/css/main.css';
+			cssMain.rel = 'stylesheet';
+			cssMain.type = 'text/css';
+			document.getElementsByTagName('head')[0].appendChild(css);
+		})();
+	</script>
+<script data-name="BMC-Widget" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="h3withlaura" data-description="Support me on Buy me a coffee!" data-message="Thank you for visiting. Feel free to donate a coffee if you find value in the content!" data-color="#f0f0f0" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
 
 	{% seo %}
+	{% if page.image %}
+  <meta property="og:image" content={{ page.image }}>
+{% else %}
+  <meta property="og:image" content=https://res.cloudinary.com/rockmonkey/image/upload/v1587782937/Blog/Burger-Up-Salad_w1gncd.jpg>
+{% endif %}
 </head>
