--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -26,40 +26,20 @@
       <!-- <span class="image featured"><img src="{{ page.featured-image }}" alt="{{page.alt}}" /></span> -->
       {% if page.featured-image %}
       <!--  <span class="image featured"><img src="{{ site.url }}{{ site.baseurl }}/images/blog/{{ page.featured-image }}" alt="{{page.alt}}" /></span> -->
-      <span class="image featured">
-        <img class="lazyload"
-          src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-          data-src="https://res.cloudinary.com/rockmonkey/image/upload/dpr_auto,f_auto,fl_any_format.fast_scale.force_strip.immutable_cache.progressive.progressive:semi.progressive:steep,q_auto/v1587782942/{{ page.featured-image }}"
-          data-srcset="https://res.cloudinary.com/rockmonkey/image/upload/dpr_auto,f_auto,fl_any_format.fast_scale.force_strip.immutable_cache.progressive.progressive:semi.progressive:steep,q_auto,w_400/v1587782942/{{ page.featured-image }} 400w,
-                    https://res.cloudinary.com/rockmonkey/image/upload/dpr_auto,f_auto,fl_any_format.fast_scale.force_strip.immutable_cache.progressive.progressive:semi.progressive:steep,q_auto,w_800/v1587782942/{{ page.featured-image }} 800w,
-                    https://res.cloudinary.com/rockmonkey/image/upload/dpr_auto,f_auto,fl_any_format.fast_scale.force_strip.immutable_cache.progressive.progressive:semi.progressive:steep,q_auto,w_1200/v1587782942/{{ page.featured-image }} 1200w"
-          data-sizes="auto"
-          alt="{{page.alt | default: page.title }}" 
-          width="1200" 
-          height="800"
-          loading="lazy" />
-      </span>
+      <span class="image featured"><img
+          src="https://res.cloudinary.com/rockmonkey/image/upload/dpr_auto,f_auto,fl_any_format.fast_scale.force_strip.immutable_cache.progressive.progressive:semi.progressive:steep,q_auto/v1587782942/{{ page.featured-image }}"
+          alt="{{page.alt}}" /></span>
+
       {% endif %}
 
-      <article class="blog-content">
-        {% if page.toc %}
-        {% include toc.html %}
-        {% endif %}
-        {{content}}
-      </article>
+      {{content}}
 
-      {% include social-share.html %}
-
-      <div class="tag-container">
-        {% for tag in page.tags %}
-        {% capture tag_name %}{{ tag }}{% endcapture %}
-        <a href="/tag/{{ tag_name }}" class="tag-link"><code class="tag-code">
-            <nobr>{{ tag_name }}</nobr>
-          </code></a>
-        {% endfor %}
-      </div>
-
-      {% include related-posts.html %}
+      {% for tag in page.tags %}
+      {% capture tag_name %}{{ tag }}{% endcapture %}
+      <a href="/tag/{{ tag_name }}"><code class="highligher-rouge">
+          <nobr>{{ tag_name }}</nobr>
+        </code>&nbsp</a>
+      {% endfor %}
     </div>
 
 
@@ -85,59 +65,3 @@
 
   {% include cta.html %}
   {% include footer.html %}
-
-  <!-- Recipe Schema if it's a recipe post (if contains "ingredients" and "instructions" in tags) -->
-  {% if page.tags contains "recipes" %}
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org/",
-    "@type": "Recipe",
-    "name": "{{ page.title }}",
-    "image": [
-      "https://res.cloudinary.com/rockmonkey/image/upload/dpr_auto,f_auto,fl_any_format.fast_scale.force_strip.immutable_cache.progressive.progressive:semi.progressive:steep,q_auto/v1587782942/{{ page.featured-image }}"
-    ],
-    "author": {
-      "@type": "Person",
-      "name": "{{ site.author }}"
-    },
-    "datePublished": "{{ page.date | date_to_xmlschema }}",
-    "description": "{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}",
-    "recipeCategory": "{% for tag in page.tags %}{{ tag }}{% unless forloop.last %}, {% endunless %}{% endfor %}",
-    "recipeCuisine": "Paleo",
-    "keywords": "{% for tag in page.tags %}{{ tag }}{% unless forloop.last %}, {% endunless %}{% endfor %}",
-    "recipeYield": "2-4 servings"
-  }
-  </script>
-  {% else %}
-  <!-- Article Schema for non-recipe posts -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Article",
-    "headline": "{{ page.title }}",
-    "image": "https://res.cloudinary.com/rockmonkey/image/upload/dpr_auto,f_auto,fl_any_format.fast_scale.force_strip.immutable_cache.progressive.progressive:semi.progressive:steep,q_auto/v1587782942/{{ page.featured-image }}",
-    "author": {
-      "@type": "Person",
-      "name": "{{ site.author }}"
-    },
-    "publisher": {
-      "@type": "Organization",
-      "name": "{{ site.title }}",
-      "logo": {
-        "@type": "ImageObject",
-        "url": "{{ site.schema.publisher.logo.url }}"
-      }
-    },
-    "datePublished": "{{ page.date | date_to_xmlschema }}",
-    "dateModified": "{% if page.last_modified_at %}{{ page.last_modified_at | date_to_xmlschema }}{% else %}{{ page.date | date_to_xmlschema }}{% endif %}",
-    "description": "{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}",
-    "mainEntityOfPage": {
-      "@type": "WebPage",
-      "@id": "{{ page.url | replace:'index.html','' | absolute_url }}"
-    },
-    "keywords": "{% for tag in page.tags %}{{ tag }}{% unless forloop.last %}, {% endunless %}{% endfor %}"
-  }
-  </script>
-  {% endif %}
-</body>
-</html>
