--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 
 <!--
 	Alpha by HTML5 UP
@@ -9,79 +9,15 @@
 {% include head.html %}
 
 <body class="landing">
-    <div id="page-wrapper">
-        {% include header.html %}
-        {{ content }}
-        {% include footer.html %}
-    </div>
-    
-    <!-- Schema.org structured data for breadcrumbs -->
-    {% if page.url != "/" %}
-    <script type="application/ld+json">
-    {
-        "@context": "https://schema.org",
-        "@type": "BreadcrumbList",
-        "itemListElement": [
-            {
-                "@type": "ListItem",
-                "position": 1,
-                "name": "Home",
-                "item": "{{ site.url }}{{ site.baseurl }}/"
-            },
-            {% if page.layout == "post" %}
-            {
-                "@type": "ListItem",
-                "position": 2,
-                "name": "Blog",
-                "item": "{{ site.url }}{{ site.baseurl }}/blog/"
-            },
-            {
-                "@type": "ListItem",
-                "position": 3,
-                "name": "{{ page.title }}"
-            }
-            {% else %}
-            {
-                "@type": "ListItem",
-                "position": 2,
-                "name": "{{ page.title }}"
-            }
-            {% endif %}
-        ]
-    }
-    </script>
-    {% endif %}
-    
-    <!-- Schema.org structured data for online health blog -->
-    <script type="application/ld+json">
-    {
-        "@context": "https://schema.org",
-        "@type": "Blog",
-        "name": "{{ site.title }}",
-        "url": "{{ site.url }}{{ site.baseurl }}/",
-        "logo": "{{ site.schema.publisher.logo.url | absolute_url }}",
-        "image": "{{ site.defaults[0].values.image | absolute_url }}",
-        "description": "{{ site.description }}",
-        "email": "{{ site.email }}",
-        "sameAs": [
-            "{{ site.facebook_URL }}",
-            "https://instagram.com/{{ site.instagram_username }}"
-        ],
-        "publisher": {
-            "@type": "Person",
-            "name": "{{ site.author }}",
-            "email": "{{ site.email }}"
-        },
-        "knowsAbout": [
-            "Paleo diet",
-            "Gluten-free recipes",
-            "Sugar-free recipes",
-            "Health and wellness",
-            "Nutrition",
-            "Autoimmune diet"
-        ]
-    }
-    </script>
+
+  {% include header.html %}
+
+  {{ content }}
+
+  {% include cta.html %}
+  {% include footer.html %}
+
+
 </body>
 
 </html>
