--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -46,6 +46,8 @@
 <script src="{{ site.url }}{{ site.baseurl }}/assets/js/main.js"></script>
 <script src="{{ site.url }}{{ site.baseurl }}/assets/js/lazysizes.min.js"></script>
 
+<!-- GA4 Custom Events Tracking -->
+<script src="{{ site.url }}{{ site.baseurl }}/assets/js/ga4-events.js"></script>
 
 </body>
 
