Google Analytics Update

--- a/_layouts/blog-search.html
+++ b/_layouts/blog-search.html
@@ -9,6 +9,8 @@
 {% include head-search.html %}
 
 <body>
+  {% include gtm-body.html %}
+
   {% include header.html %}
 
   <!--  {% if page.featured-image %}
