--- a/_includes/head-search.html
+++ b/_includes/head-search.html
@@ -6,33 +6,14 @@
 	{% include collecttags.html %}
 	{% endif %}
 
-	<!-- Global site tag (gtag.js) - Google Analytics 4 -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-CJZCQWFC20"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag() {
-			dataLayer.push(arguments);
-		}
-		gtag('js', new Date());
-		
-		// Enhanced configuration with key settings
-		gtag('config', 'G-CJZCQWFC20', {
-			'send_page_view': true,
-			'page_title': document.title,
-			'page_location': window.location.href,
-			'cookie_domain': 'h3withlaura.com',
-			'timer_name': 'GA4PageLoad'
-		});
-		
-		// Track page load timing
-		window.addEventListener('load', function() {
-			gtag('event', 'timing_complete', {
-				'name': 'load',
-				'value': Math.round(performance.now()),
-				'event_category': 'Page Timing'
-			});
-		});
-	</script>
+	<!-- Google Tag Manager -->
+	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','GTM-NCXLMM2S');</script>
+	<!-- End Google Tag Manager -->
+	
 	<title>{{ site.title }}</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
