--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -9,6 +9,8 @@
 {% include head.html %}
 
 <body>
+  {% include gtm-body.html %}
+  
   {% include header.html %}
 
   <!--  {% if page.featured-image %}
