--- a/_layouts/christmas.html
+++ b/_layouts/christmas.html
@@ -11,6 +11,8 @@
 {% include head.html %}
 
 <body>
+  {% include gtm-body.html %}
+  
   {% include header.html %}
 
   <!--  {% if page.featured-image %}
