--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -11,6 +11,8 @@
 {% include head.html %}
 
 <body>
+  {% include gtm-body.html %}
+  
   {% include header.html %}
 
   <section id="main" class="container">
